--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
             <tr>
                 <th scope="row">Email :</th>
                 <td>deaw0947205553@gmail.com</td>
-            </tr>            
+            </tr>
+            <tr>
+                <th scope="row">Address :</th>
+                <td>100/8 ต.สากเหล็ก อ.สากเหล็ก จ.พิจิตร 66160</td>
+            </tr>
+            <tr>
+                <th scope="row">Instagram :</th>
+                <td>deaw.cnp</td>
+            </tr>
         </tbody>                    
     </table>
     
